--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
+  <script src="https://www.paypal.com/sdk/js?client-id=AeWRUnqD6WHs0PxA4AwoTVnO4CCU2O4GR5O6F9o18-6sfcLpuZn3iDW_jA465ZbIazGx03VQqzz6HmpJ&currency=PLN"></script>
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
